# sweeper

./: Cargo.toml
assets/: style.css
src/: game.rs  main.rs  render.rs  routes.rs  state.rs  utils.rs
src/routes/: flag.rs  game.rs  index.rs  new.rs  reveal.rs
templates/: game.j2  game.jinja  index.html
