[package]
name = "sweeper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.4", features = ["macros"] }
minijinja = { version = "2.0.3", features = ["loader"] }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
